--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,30 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.1.101'
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
+
+  test:
+    needs: build
+    name: Run tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: PLACEHOLDER FOR FUTURE UNIT TESTS
+      run: echo Hello tests! (TODO)
+
+  deploy:
+    needs: test
+    name: Deploy to the cloud
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Deploy to Azure web app
+      uses: azure/appservice-actions/webapp@master
+      with:
+        app-name: nebularapi
+        publish-profile: ${{ secrets.azureWebAppPublishProfile }}    
