Move .SLN file above project to have easier CI build

--- a/NebularApi/Properties/launchSettings.json
+++ b/NebularApi/Properties/launchSettings.json
@@ -9,6 +9,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "NebularApi_PROD": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "PROD"
+      }
     }
   }
 }
