--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.101'
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+    - name: Build and publish with dotnet
+      run: |
+          dotnet build --configuration Release
+          dotnet publish -c Release -o nebularApiApp 
 
   test:
     needs: build
@@ -36,3 +38,4 @@ jobs:
       with:
         app-name: nebularapi
         publish-profile: ${{ secrets.azureWebAppPublishProfile }}    
+        package: './nebularApiApp'
